check_PROGRAMS = \
	test_checkname \
	test_comparenames \
	test_comparenames2 \
	test_encodename \
	test_decodename \
	test_decodename2 \
	test_language \
	test_localencoding \
	test_result \
	test_version

test_checkname_SOURCES = test_checkname.c
test_checkname_LDADD = $(top_builddir)/lib/libidnkit.la
test_checkname_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_comparenames_SOURCES = test_comparenames.c
test_comparenames_LDADD = $(top_builddir)/lib/libidnkit.la
test_comparenames_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_comparenames2_SOURCES = test_comparenames2.c
test_comparenames2_LDADD = $(top_builddir)/lib/libidnkit.la
test_comparenames2_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_encodename_SOURCES = test_encodename.c
test_encodename_LDADD = $(top_builddir)/lib/libidnkit.la
test_encodename_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_decodename_SOURCES = test_decodename.c
test_decodename_LDADD = $(top_builddir)/lib/libidnkit.la
test_decodename_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_decodename2_SOURCES = test_decodename2.c
test_decodename2_LDADD = $(top_builddir)/lib/libidnkit.la
test_decodename2_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_language_SOURCES = test_language.c
test_language_LDADD = $(top_builddir)/lib/libidnkit.la
test_language_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_localencoding_SOURCES = test_localencoding.c
test_localencoding_LDADD = $(top_builddir)/lib/libidnkit.la
test_localencoding_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_result_SOURCES = test_result.c
test_result_LDADD = $(top_builddir)/lib/libidnkit.la
test_result_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

test_version_SOURCES = test_version.c
test_version_LDADD = $(top_builddir)/lib/libidnkit.la
test_version_DEPENDENCIES = $(top_builddir)/lib/libidnkit.la

INCLUDES = -I$(top_srcdir)/include -I$(top_builddir)/include
